Fix scroll broken on safari #247 (#248)

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
@@ -8,7 +8,7 @@ app-component-sidenav {
 .docs-component-viewer-sidenav-container {
   width: 100%;
 
-  .mat-sidenav-content {
+  .mat-drawer-content {
     position: absolute;
     right: 0;
     left: 0;
